@@ -1,10 +1,10 @@
 /*
      This file is part of libmicrohttpd
-     (C) 2007 Christian Grothoff
+     (C) 2007,2013 Christian Grothoff
 
      libmicrohttpd is free software; you can redistribute it and/or modify
      it under the terms of the GNU General Public License as published
-     by the Free Software Foundation; either version 2, or (at your
+     by the Free Software Foundation; either version 3, or (at your
      option) any later version.
 
      libmicrohttpd is distributed in the hope that it will be useful, but
@@ -94,10 +94,12 @@ value_checker (void *cls,
 #if 0
   fprintf (stderr,
            "VC: `%s' `%s' `%s' `%s' `%.*s'\n",
-           key, filename, content_type, transfer_encoding, size, data);
+           key, filename, content_type, transfer_encoding,
+           (int) size,
+           data);
 #endif
   if ( (0 != off) && (0 == size) )
-    return MHD_YES; 
+    return MHD_YES;
   if ((idx < 0) ||
       (want[idx] == NULL) ||
       (0 != strcmp (key, want[idx])) ||
@@ -151,14 +153,53 @@ test_urlencoding ()
 
 
 static int
+test_multipart_garbage ()
+{
+  struct MHD_Connection connection;
+  struct MHD_HTTP_Header header;
+  struct MHD_PostProcessor *pp;
+  unsigned int want_off;
+  size_t size = strlen (FORM_DATA);
+  size_t splitpoint;
+  char xdata[size + 3];
+
+  /* fill in evil garbage at the beginning */
+  xdata[0] = '-';
+  xdata[1] = 'x';
+  xdata[2] = '\r';
+  memcpy (&xdata[3], FORM_DATA, size);
+  size += 3;
+
+  size = strlen (FORM_DATA);
+  for (splitpoint = 1; splitpoint < size; splitpoint++)
+  {
+    want_off = FORM_START;
+    memset (&connection, 0, sizeof (struct MHD_Connection));
+    memset (&header, 0, sizeof (struct MHD_HTTP_Header));
+    connection.headers_received = &header;
+    header.header = MHD_HTTP_HEADER_CONTENT_TYPE;
+    header.value =
+      MHD_HTTP_POST_ENCODING_MULTIPART_FORMDATA ", boundary=AaB03x";
+    header.kind = MHD_HEADER_KIND;
+    pp = MHD_create_post_processor (&connection,
+                                    1024, &value_checker, &want_off);
+    MHD_post_process (pp, xdata, splitpoint);
+    MHD_post_process (pp, &xdata[splitpoint], size - splitpoint);
+    MHD_destroy_post_processor (pp);
+    if (want_off != FORM_END)
+      return (int) splitpoint;
+  }
+  return 0;
+}
+
+
+static int
 test_multipart_splits ()
 {
   struct MHD_Connection connection;
   struct MHD_HTTP_Header header;
   struct MHD_PostProcessor *pp;
   unsigned int want_off;
-  int i;
-  int delta;
   size_t size;
   size_t splitpoint;
 
@@ -175,13 +216,8 @@ test_multipart_splits ()
     header.kind = MHD_HEADER_KIND;
     pp = MHD_create_post_processor (&connection,
                                     1024, &value_checker, &want_off);
-    i = 0;
-    delta = splitpoint;
-    MHD_post_process (pp, &FORM_DATA[i], delta);
-    i += delta;
-    delta = 1 + size - i;
-    MHD_post_process (pp, &FORM_DATA[i], delta);
-    i += delta;
+    MHD_post_process (pp, FORM_DATA, splitpoint);
+    MHD_post_process (pp, &FORM_DATA[splitpoint], size - splitpoint);
     MHD_destroy_post_processor (pp);
     if (want_off != FORM_END)
       return (int) splitpoint;
@@ -301,8 +337,9 @@ main (int argc, char *const *argv)
 {
   unsigned int errorCount = 0;
 
-  errorCount += test_urlencoding ();
   errorCount += test_multipart_splits ();
+  errorCount += test_multipart_garbage ();
+  errorCount += test_urlencoding ();
   errorCount += test_multipart ();
   errorCount += test_nested_multipart ();
   errorCount += test_empty_value ();
